<resources>
     <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="video_layout_loading">正在缓冲...</string>
   <string name="reUpfile">补传现场拍摄的文件0个</string>
    <string name="my_app_name">医药信息在线</string>
    <string name="hello_world">hello</string>
    <string name="app_name">医药信息在线</string>
    <string name="hint_input_username">输入用户名</string>
    <string name="hint_input_userpassword">输入密码</string>
    <string name="text_active_code_cancel">取消</string>
    <string name="text_remeber_number">记住密码</string>
    <string name="informationReport">信息汇报</string>
    <string name="takepicture">拍摄照片</string>
    <string name="takemove">录制视频</string>
    <string name="locationUpdate">位置上传</string>
    <string name="projectType">项目类型</string>
    <string name="priojectName">项目名称</string>
    <string name="updatePhoneNumber">绑定手机卡</string>
    <string name="updatePassword"> 修改密码</string>
    <string name="systemSetting">系统设置</string>
    <string name="bingPhoneNumber">绑定手机卡</string>
    <string name="yourCount">你的帐号是</string>
    <string name="pleaseInputPassword">请输入登录密码</string>
    <string name="pleaseInputPhoneNumber">请输入本手机号码</string>
    <string name="phoneNumberBing">手机卡绑定</string>
    <string name="hintCount">帐号</string>
    <string name="hintPassword">密码</string>
    <string name="hintPhoneNumber">手机号码</string>
    <string name="pleaseInputPreviewPassword">请输入原密码</string>
    <string name="pleaseInputNewPassword">请输入新密码</string>
    <string name="pleaseRepeatNewPassword">请再次输入新密码</string>
    <string name="newPassword">新密码</string>
    <string name="previewPassword">原密码</string>
    <string name="contacstManage">通讯录管理</string>
    <string name="loginBtn">登录</string>
    <string name="bindPhoneSuccess">本手机卡已与帐号绑定，其他手机卡使用本帐号将无法登录系统，保障您及公司信息更加安全。如果如果更换手机卡时，请联系联系系统管理员帮助
        	您解除与原手机卡的绑定，然后再通过本手机的绑定</string>
    <string name="reSetPasswordSuccess">您的密码已经修改，请退出系统使用新的密码重新登录。</string>
       <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">MuPDF</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    <string name="text_industry_list">行业列表</string>
    <string name="text_loading">正在加载…</string>
    <string name="text_shareing">正在分享…,请稍后</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_more">更多</string>
    <string name="text_tips">温馨提示</string>
    <string name="error_message_http">网络出错，请检查网络连接是否正确</string>
    <string name="error_no_industry">此行业不存在</string>
    <string name="confrim_logout">确定要退出吗?</string>
    <string name="text_click_load_more">点击加载更多</string>
    <string name="chose_plates">选择版块栏目</string>
    <string name="no_news">暂时没有新闻</string>
    <string name="no_next_news">已是最后一条新闻了</string>
    <string name="no_prev_news">已是第一条新闻了</string>
    <string name="share_to_wx">微信分享</string>
    <string name="share_to_weibo">weibo分享</string>
    <string name="share_to_linkedin">LinkedIn分享</string>
    <string name="share_to_email">Email分享</string>
    <string name="sent_your_comment">发表你的评论</string>
    <string name="share_email_title">分享一篇文章：%s 来自：商情通</string>
    <string name="share_email_end_last_text">分享之手机应用商情通:</string>
    <string name="can_not_open_email">无法打开邮箱，请检查你的时候是否装有邮箱程序</string>
    <string name="share_to_linkein_title">分享至LinkedIn</string>
    <string name="can_input_n_word">还可输入%d字</string>
    <string name="link_9tong_down">http://www.9tong.com/download.html</string>
    <string name="share_sign_with_sqt">(分享自商情通)</string>
    <string name="text_share_successfully">分享成功！</string>
    <string name="text_share_failure">分享失败！</string>
    <string name="error_do_not_get_auth_url">无法获取LinkedIn验证地址</string>
    <string name="error_do_not_open_wx">无法分享到微信</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="pull_to_refresh_tap_label">点击刷新…</string>
    <string name="pull_to_refresh_update">"最后更新: "</string>
    <string name="ctd_arrow_right">一个向右的箭头，表示这一项可以点击进入</string>
    <string name="ctd_cut_line">一条分割线</string>
    <string name="ctd_icon">一个icon图标</string>
    <string name="ctd_nothing" />
    <string name="ctd_clear">清楚按钮图标</string>
    <string name="ctd_button">图片按钮</string>
    <string name="zero">0</string>
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="hello">Hello World, TextActivity!</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_hello">Hello World, TextActivity!</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="meeting_choice_country_title">请选择展会国家</string>
    <string name="meeting_choice_city_title">请选择展会所在城市</string>
    <string name="meeting_choice_industry_title">请选择展会会议所在行业</string>
    <string name="meeting_my_favorite_filters_title">请选择会议的类型</string>
    <string name="text_start_use">开始使用</string>
    <string name="text_message_centre">消息中心</string>
    <string name="text_receive_n_message">收到%d条消息</string>
    <string name="text_trend">动态</string>
    <string name="text_message">对话</string>
    <string name="text_notice">通知</string>
    <string name="text_contacts_manage">人脉管理</string>
    <string name="text_contacts_plaza">人脉广场</string>
    <string name="text_contacts_list">通讯录</string>
    <string name="text_bussiness_contacts">商业人脉</string>
    <string name="text_my_contacts">我的人脉</string>
    <string name="text_company_group">公司群组</string>
    <string name="text_company_group_sub_desc">按照公司群组管理通讯录</string>
    <string name="text_scan_and_spot">扫描识别</string>
    <string name="text_scan_card">扫描名片</string>
    <string name="text_card_scan">名片识别</string>
    <string name="text_scan_own_card">扫描自己的名片</string>
    <string name="text_or_scan_your_business_card">你也可以</string>
    <string name="text_business_card_holder">名片夹</string>
    <string name="text_my_profile">我的档案</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_modify_password">修改密码</string>
    <string name="text_switch_account">切换帐号</string>
    <string name="text_just_join">最新加入</string>
    <string name="text_just_join_alice">完善个人资料的新用户会出现在这里</string>
    <string name="text_might_recognize">可能认识</string>
    <string name="text_might_recognize_alice">结识人脉的人脉，深度挖掘关系网</string>
    <string name="text_city_contacts">附近人脉</string>
    <string name="text_city_contacts_alice">发现你身边的商业人脉，在身边寻找商机</string>
    <string name="text_meeting_contacts">展会人脉</string>
    <string name="text_meeting_contacts_alice">查找参加过相关展会的潜在人脉</string>
    <string name="text_industry_contacts">行业人脉</string>
    <string name="text_industry_contacts_alice">方便寻找特定行业的商业人脉</string>
    <string name="text_exchange_business_cards">交换名片</string>
    <string name="text_exchange_business_cards_alice">通过手机号码、邮箱或人脉通ID来交换名片</string>
    <string name="text_exhibition_forum">近期展会</string>
    <string name="text_exhibition_forum_sub_desc">未来一段时间的展会论坛</string>
    <string name="text_past_activity">过往展会</string>
    <string name="text_past_activity_sub_desc">刚刚结束的展会论坛</string>
    <string name="text_meeting_and_activity">展会论坛</string>
    <string name="text_exhibition_ground">展会广场</string>
    <string name="text_hot_exhibition">最热展会</string>
    <string name="text_hot_exhibition_sub_desc">本周收藏、签到人数最多的展会论坛</string>
    <string name="text_search_exhibition">展会搜索</string>
    <string name="text_search_exhibition_sub_desc">根据关键字快速搜索相关领域的展会论坛</string>
    <string name="text_my_activity">我的展会</string>
    <string name="text_my_activity_sub_desc">收藏、签到感兴趣或有价值的展会论坛</string>
    <string name="text_version_name">版本号: V%s</string>
    <string name="text_account">帐号</string>
    <string name="text_bind_phone_or_email">绑定手机或邮箱</string>
    <string name="hint_text_input_account">手机号码或email</string>
    <string name="hint_text_input_password">6到10位英文或数字</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_logout">退出登录</string>
    <string name="text_you_have_not_account">你还没有账号？</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_get_lost_password">找回密码</string>
    <string name="text_register_user">注册用户</string>
    <string name="text_again_register_user">重新注册</string>
    <string name="text_list_empty">列表为空</string>
    <string name="text_talk_and_message">对话与私信</string>
    <string name="text_old_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_get_validate_code">获取验证码</string>
    <string name="text_forget_password_tips_msg">请确认此电话或email在你手中，并可接收短信、邮件</string>
    <string name="text_account_input_tips">人脉通目前仅支持中国移动，联通，电信三家运营商的短信激活，除此之外请使用email注册帐号</string>
    <string name="text_profile_complete_percentage">档案完善度%s</string>
    <string name="text_private_setting">隐私设置</string>
    <string name="text_publish_business_opportunities">发布商机</string>
    <string name="text_supply">供应</string>
    <string name="text_demand">需求</string>
    <string name="text_recruit">招聘</string>
    <string name="text_sinaweibo">新浪微博</string>
    <string name="text_sinaweibo_bind_tips">"绑定微博有助于你的
商业人脉更好的了解你"</string>
    <string name="text_bind_linkedin">绑定LinkedIn</string>
    <string name="text_bind_linkedin_tips">绑定LinkedIn有助于让你的商业人脉更好的了解你，同步你的个人档案</string>
    <string name="hint_input_old_password">请输入旧密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_phone_or_email">手机号码或邮箱</string>
    <string name="hint_input_four_validate_code">请输入4位数验证码</string>
    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>