<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/menu_layout" android:background="@color/app_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_nav_rmt9_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/scroll_view">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/text_message_centre" style="@style/menu_label_title" />
            <RelativeLayout android:id="@id/menu_trend" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_trend" style="@style/menu_icon" />
                <TextView android:text="@string/text_trend" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
            <RelativeLayout android:id="@id/menu_message" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_message" style="@style/menu_icon" />
                <TextView android:text="@string/text_message" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
            <RelativeLayout android:id="@id/menu_notice" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_notice" style="@style/menu_icon" />
                <TextView android:text="@string/text_notice" style="@style/menu_text" />
            </RelativeLayout>
            <TextView android:text="@string/text_contacts_manage" style="@style/menu_label_title" />
            <RelativeLayout android:id="@id/menu_contacts_list" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_contacts_list" style="@style/menu_icon" />
                <TextView android:text="@string/text_contacts_list" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
            <RelativeLayout android:id="@id/menu_bussiness_contacts" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_bussiness_contacts" style="@style/menu_icon" />
                <TextView android:text="@string/text_bussiness_contacts" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
            <RelativeLayout android:id="@id/menu_company_group" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_company_group" style="@style/menu_icon" />
                <TextView android:text="@string/text_company_group" style="@style/menu_text" />
            </RelativeLayout>
            <TextView android:text="@string/text_scan_card" style="@style/menu_label_title" />
            <RelativeLayout android:id="@id/menu_scan_and_spot" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_scan_and_spot" style="@style/menu_icon" />
                <TextView android:text="@string/text_scan_and_spot" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
            <RelativeLayout android:id="@id/menu_business_card_holder" style="@style/menu_layout">
                <ImageView android:src="@drawable/icon_card" style="@style/menu_icon" />
                <TextView android:text="@string/text_business_card_holder" style="@style/menu_text" />
            </RelativeLayout>
            <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
