<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include_nav" layout="@layout/include_nav" />
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout style="@style/input_cell">
            <TextView android:text="@string/text_old_password" style="@style/input_label" />
            <ImageButton android:id="@id/old_password_clear" style="@style/input_clear" />
            <EditText android:id="@id/input_old_password" android:hint="@string/hint_input_old_password" android:digits="@string/digits_password" android:layout_toLeftOf="@id/old_password_clear" android:inputType="text" style="@style/input_edit" />
        </RelativeLayout>
        <RelativeLayout style="@style/input_cell">
            <TextView android:text="@string/text_new_password" style="@style/input_label" />
            <ImageButton android:id="@id/new_password_clear" style="@style/input_clear" />
            <EditText android:id="@id/input_new_password" android:hint="@string/hint_input_new_password" android:digits="@string/digits_password" android:layout_toLeftOf="@id/new_password_clear" android:inputType="text" style="@style/input_edit" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
