<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include_nav" layout="@layout/include_nav" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/include_nav" style="@style/scroll_view">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_forget_password_tips_msg" />
            <RelativeLayout style="@style/input_cell">
                <ImageButton android:id="@id/account_clear" android:contentDescription="@string/ctd_clear" style="@style/input_clear" />
                <EditText android:id="@id/input_account" android:hint="@string/hint_phone_or_email" android:layout_toLeftOf="@id/account_clear" android:inputType="text" style="@style/input_edit" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip">
                <Button android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/button_getcode" android:background="@drawable/silver_button_3_background" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="33.0dip" android:text="@string/text_get_validate_code" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout style="@style/input_cell">
                <ImageButton android:id="@id/code_clear" android:contentDescription="@string/ctd_clear" style="@style/input_clear" />
                <EditText android:id="@id/input_code" android:hint="@string/hint_input_four_validate_code" android:maxLength="4" android:layout_toLeftOf="@id/code_clear" android:inputType="numberSigned" style="@style/input_edit" />
            </RelativeLayout>
            <RelativeLayout style="@style/input_cell">
                <ImageButton android:id="@id/new_password_clear" android:contentDescription="@string/ctd_clear" style="@style/input_clear" />
                <EditText android:id="@id/input_new_password" android:hint="@string/hint_input_new_password" android:maxLength="10" android:digits="@string/digits_password" android:layout_toLeftOf="@id/new_password_clear" android:inputType="text" style="@style/input_edit" />
            </RelativeLayout>
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/button_ok" android:background="@drawable/blue_button_3_background" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_ok" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
